<resources>

    <string name="app_name">AndroidSerial</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Aruino_BT</string>
    
    <string name="recvd_message_text">Message Received:</string>
    <string name="send_msg_text">Message to Send:</string>
    <string name="send_msg_button_text">Send Message</string>
    <string name="status_text">Doing nothing yet</string>
    <string name="close_button_text">Close</string>
    <string name="open_button_text">Open</string>
	<string name="send_color_button_text">Send Color</string>
	<string name="twist_servo_button_text">Twist Servo</string>
	<string name="read_photo_button_text">Read Photoresistor</string>
	<string name="photo_value_label_text">Photoresistor Value</string>
	<string name="read_rotn_button_text">Read Rotation</string>
	<string name="cancel_dialog_button_text">Cancel</string>
	<string name="x_rotn_label_text">X-axis rotation:</string>
	
	<string name="exit_button_text">Exit</string>
	
</resources>